# flash-attn-minimal-slang

./: .pre-commit-config.yaml  README.md  pyproject.toml
asset/shader/: flash_attn.slang
examples/: simple.py
src/flash_attn_minimal_slang/: __init__.py
src/flash_attn_minimal_slang/attention/: __init__.py  flash_attention.py  naive_attention.py
test/: test_flash_attention.py  test_naive_attention.py
