[project]
name = "flash-attn-minimal-slang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tsumli", email = "28624172+tsumli@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "slangpy>=0.36.0",
    "torch>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
